--- a/app/views/exhibitions/_form-exhibition.html.erb
+++ b/app/views/exhibitions/_form-exhibition.html.erb
@@ -5,5 +5,6 @@
   <%= f.input :address %>
   <%= f.input :start_date, as: :date %>
   <%= f.input :end_date, as: :date %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.button :submit, class:"btn btn-primary" %>
 <% end %>
