--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,8 +40,8 @@
   <div class="container-work-of-art-cards">
     <% @user.work_of_arts.each do |art| %>
       <div class="work-of-art-card-card">
-        <% if @user.photo.attached? %>
-          <%= image_tag @user.photo, crop: :fill %>
+        <% if art.photo.attached? %>
+          <%= image_tag art.photo, crop: :fill %>
         <% else %>
           <%= link_to image_tag("dodoma.png") %>
         <% end %>
