--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,11 @@
           <%= link_to image_tag("artist.png"), user_path(user)%>
         <% end %>
         <div class="artist-card-infos">
-          <h3><%= user.first_name %> - <%= user.last_name %></h3>
+          <h3> <%= link_to user_path(user) do %>
+            <%= user.first_name %> - <%= user.last_name %>
+            <% end %>
+
+          </h3>
           <h4><%= user.art_type%></h4>
           <p><%= user.city%>, <%= user.country%></p>
           <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
