--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,7 @@
           <%= link_to image_tag("dodoma.png") %>
         <% end %>
         <div class="work-of-art-card-infos">
-          <h3><%= art.name %></h3>
+          <h3><%= link_to art.name, work_of_art_path(art) %></h3>
           <p><%= art.description %></p>
           <% if current_user == @user %>
             <div class="btn-work-of-art">
