--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -1,16 +1,28 @@
-<div class="container">
-  <% @exhibitions.each do |exhibition| %>
-  <div class="work-of-art-card">
-    <%= link_to exhibition.name, exhibition_path(exhibition) %>
+<div class="<%= page_background_class %>">
+<br>
+ <div class="container-exhibition-cards">
+    <% @exhibitions.each do |exhibition| %>
+    <div class="exhibition-card">
+      <%= link_to image_tag("dodoma.png") %>
+      <div class="exhibition-card-infos">
+        <h3><%= link_to exhibition.name, exhibition_path(exhibition) %></h3>
+        <hr>
+        <h4><%= link_to exhibition.category, "#" %></h4>
+        <hr>
+        <p><%= link_to exhibition.description, "#" %></p>
+        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+      </div>
+    </div>
+    <hr class="divider">
     <% end %>
   </div>
-  <%= link_to "Homepage", root_path, class: 'btn btn-primary' %>
 
   <div class="map-index">
-      <div id="map"
-           style="width: 75%; height: 500px;"
-           data-markers="<%= @markers.to_json %>"
-           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    <div id="map"
+      style="width: 75%; height: 500px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
+  <br>
 </div>
-
