--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="<%= page_background_class %>">
   <div class="work-of-art-card">
     <h3><%= @exhibition.name %></h3>
     <h4><%= @exhibition.start_date %> - <%= @exhibition.end_date %></h4>
     <p><%= @exhibition.description %></p>
   </div>
-   <%= link_to "All collabs", collabs_path, class: 'btn btn-primary' %>
-   <%= link_to "All exhibitions", exhibitions_path, class: 'btn btn-primary' %>
+  <%= link_to "All collabs", collabs_path, class: 'btn btn-primary' %>
+  <%= link_to "All exhibitions", exhibitions_path, class: 'btn btn-primary' %>
+  <br>
 </div>
