--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -4,12 +4,12 @@
     <div class="work-of-art-card">
       <%= user.username %>
       <% if @collab.users.include?(current_user) %>
-        <%= link_to "Remove this artist", users_collab_path(@collab.users_collabs.find {|uc| uc.user == user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
+        <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
       <% end %>
     </div>
   <% end %>
   <% if @collab.users.include?(current_user) %>
-    <%= link_to "Add a member", new_collab_users_collab_path(@collab) %>
+    <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
   <% end %>
   <%= link_to "Back", collabs_path %>
 </div>
