--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,26 +8,28 @@
       <% else %>
         <%= link_to image_tag("artist.png") %>
       <% end %>
-      <div class="profile-card-infos">
-        <h3><%= @user.username  %></h3>
-        <hr>
-        <h4><%= @user.art_type  %></h4>
-        <hr>
-        <p><%= @user.city  %>, <%= @user.country  %></p>
-        <hr>
-        <p>Biography</p>
-        <p><%= @user.description  %></p>
-        <hr>
-        <p>See my exhibitions</p>
-        <hr>
-        <p>Want to collab? Send a message!</p>
-        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-        <hr>
+      <div class="profile-card-items">
+        <div class="profile-card-infos">
+          <h3><%= @user.username  %></h3>
+          <hr>
+          <h4><%= @user.art_type  %></h4>
+          <hr>
+          <p><%= @user.city  %>, <%= @user.country  %></p>
+          <hr>
+          <p>Biography</p>
+          <p><%= @user.description  %></p>
+          <hr>
+          <p>See my exhibitions</p>
+          <hr>
+          <p>Want to collab? Send a message!</p>
+          <br>
+          <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+        </div>
         <% if current_user == @user  %>
-          <div class="btn-profile">
-            <%= link_to "Edit my profile", edit_user_path, class: "btn btn-outline-primary btn-edit" %>
-            <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art), class: "btn btn-outline-primary" %>
-          </div>
+        <div class="btn-profile">
+          <%= link_to "Edit my profile", edit_user_path, class: "btn btn-outline-primary btn-edit" %>
+          <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art), class: "btn btn-outline-primary" %>
+        </div>
         <% end %>
       </div>
     </div>
@@ -39,7 +41,7 @@
 
   <div class="container-work-of-art-cards">
     <% @user.work_of_arts.each do |art| %>
-      <div class="work-of-art-card-card">
+      <div class="work-of-art-card">
         <% if art.photo.attached? %>
           <%= image_tag art.photo, crop: :fill %>
         <% else %>
