--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,10 +1,39 @@
 <div class="<%= page_background_class %>">
-  <div class="work-of-art-card">
-    <h3><%= @exhibition.name %></h3>
-    <h4><%= @exhibition.start_date %> - <%= @exhibition.end_date %></h4>
-    <p><%= @exhibition.description %></p>
+<br>
+
+ <div class="container-exhibition-cards">
+    <div class="exhibition-card">
+      <%= link_to image_tag("dodoma.png") %>
+      <div class="exhibition-card-items">
+        <div class="exhibition-card-infos">
+          <h3><%= @exhibition.name %></h3>
+          <hr>
+          <h4><%= @exhibition.start_date %> - <%= @exhibition.end_date %></h4>
+          <hr>
+          <h4><%= @exhibition.address %></h4>
+          <hr>
+          <p><%= @exhibition.category %></p>
+          <hr>
+          <p><%= @exhibition.description %></p>
+          <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+        </div>
+        <div class="btn-exhibition">
+          <%= link_to "Collabs", collabs_path, class: "btn btn-outline-primary" %>
+          <%= link_to "Exhibitions", exhibitions_path, class: "btn btn-outline-primary" %>
+        </div>
+      </div>
+    </div>
   </div>
-  <%= link_to "All collabs", collabs_path, class: 'btn btn-primary' %>
-  <%= link_to "All exhibitions", exhibitions_path, class: 'btn btn-primary' %>
+
+  <br>
+  <br>
+
+  <div class="map-index">
+    <div id="map"
+      style="width: 75%; height: 500px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+  </div>
   <br>
 </div>
