--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,48 +1,3 @@
-.btn {
-  font-family: "Novar";
-}
-
-.btn-search {
-  background: none;
-  font-family: "FuturaPTMedium";
-  border: 2px solid black;
-  color: black;
-  display: inline-block;
-  font-size: 18px;
-  text-align: center;
-  margin: auto;
-  padding: 15px 32px;
-  position: relative;
-  cursor: pointer;
-
-  .btn-search::before,
-  .btn-search::after {
-    background: black;
-    content: '';
-    position: absolute;
-    z-index: -1;
-  }
-
-  .btn-search:hover {
-    color: white;
-  }
-
-  .btn-search::after {
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 0;
-  }
-
-  .btn-search:hover:after {
-    width: 100%;
-  }
-}
-
 .btn-exhibition {
   display: flex;
   justify-content: space-between;
@@ -72,6 +27,27 @@
     margin-bottom: 0;
     width: 25%;
   }
+}
+
+.btn-outline-info {
+  border-color: black;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: black;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-outline-info:hover {
+  color: white;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  border-color: black;
+  text-shadow: 1px 1px 2px black;
 }
 
 .btn-outline-primary {
