--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@ $font-size-base: 1rem;
 $body-color: $gray;
 $primary:    #1098ad;
 $success:    #6fba82;
-$info:       #ffe227;
+$info:       black;
 $danger:     #ef4e7b;
 $warning:    #f79533;
 
