--- a/app/views/work_of_arts/_form-work_of_art.html.erb
+++ b/app/views/work_of_arts/_form-work_of_art.html.erb
@@ -2,12 +2,18 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login gradient-border">
+        <h2>Add a new artwork</h2>
         <%= simple_form_for @work_of_art do |f| %>
-          <%= f.input :name %>
-          <%= f.input :description %>
-          <%= f.input :photo, as: :file %>
-          <%= f.button :submit, class: "btn btn-outline-primary" %>
+          <div class="form-inputs">
+            <%= f.input :name %>
+            <%= f.input :description %>
+            <%= f.input :photo, as: :file %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Create Art!",class: "btn btn-outline-primary" %>
+          </div>
         <% end %>
+
       </div>
     </div>
   </div>
