--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,21 +4,31 @@
       <div class="form-login gradient-border">
       <h2>Edit my profile</h2>
         <%= simple_form_for @user do |f| %>
+        <div class="form-inputs">
           <%= f.input :first_name,
                       placeholder: "Gustave",
                       required: false %>
           <%= f.input :last_name,
                       placeholder: "Klimt",
                       required: false %>
+          <%= f.input :art_type,
+                      label: "Category",
+                      autofocus: true,
+                      placeholder: "Painter",
+                      required: false %>
           <%= f.input :description,
+                      label: "Biography",
                       placeholder: "Culpa aspernatur maxime id aperiam est sit ad minus vel.",
                       required: false %>
           <%= f.input :city,
                       placeholder: "Vienna",
                       required: false %>
           <%= f.input :photo, as: :file %>
+        </div>
+        <div class="form-actions">
           <%= f.button :submit, class:"btn btn-outline-primary" %>
           <%= link_to 'Cancel', user_path, class: "btn btn-outline-warning" %>
+        </div>
         <% end %>
       </div>
     </div>
