--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -96,4 +96,18 @@
   text-shadow: 1px 1px 2px #f79533;
 }
 
+.btn-arrow-left {
+  margin-left: 75px;
+  width: 15%;
+
+  i {
+    font-style: normal;
+  }
+
+  a {
+    font-family: "Novar";
+    color: black;
+    text-decoration: none;
+  }
+}
 
