--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
 <div class="<%= page_background_class %>">
   <br>
-
+  <div class="btn-arrow-left">
+  <%= link_to work_of_arts_path do %>
+    <i> &#10229; Back to Artists</i>
+  <% end %>
+  </div>
+  <br>
   <div class="container-profile-card">
     <div class="profile-card">
       <% if @user.photo.attached? %>
