--- a/app/views/work_of_arts/show.html.erb
+++ b/app/views/work_of_arts/show.html.erb
@@ -1,18 +1,24 @@
 <div class="<%= page_background_class %>">
-  
-  <div class="work-of-art-card">
-    <% if @work_of_art.photo.attached? %>
-      <%= cl_image_tag @work_of_art.photo.key, crop: :fill %>
-    <% else %>
-      <%= image_tag('dodoma.png') %>
-    <% end %>
-    <div class="work-of-art-card-infos">
-      <h3><%= @work_of_art.user.first_name %> - <%= @work_of_art.user.last_name %></h3>
-      <h4><%= @work_of_art.name %></h4>
-      <p><%= @work_of_art.description %></p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-      <%= link_to "Back", work_of_arts_path %>
+  <br>
+  <div class="btn-arrow-left">
+  <%= link_to work_of_arts_path do %>
+    <i> &#10229; Back to Artworks</i>
+  <% end %>
+  </div>
+  <br>
+  <div class="container-work-of-art-cards">
+    <div class="work-of-art-card">
+      <% if @work_of_art.photo.attached? %>
+        <%= cl_image_tag @work_of_art.photo.key, crop: :fill %>
+      <% else %>
+        <%= image_tag('dodoma.png') %>
+      <% end %>
+      <div class="work-of-art-card-infos">
+        <h3><%= @work_of_art.user.first_name %> - <%= @work_of_art.user.last_name %></h3>
+        <h4><%= @work_of_art.name %></h4>
+        <p><%= @work_of_art.description %></p>
+        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+      </div>
     </div>
   </div>
-
 </div>
