removed the text decoration for the links and changed color

--- a/app/assets/stylesheets/components/_artist-card.scss
+++ b/app/assets/stylesheets/components/_artist-card.scss
@@ -8,6 +8,11 @@
   .artist-card .artist-card-infos {
     display: flex;
     position: relative;
+
+    a {
+      text-decoration: none;
+      color: black;
+    }
   }
 
   .artist-card-infos {
