--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -30,10 +30,8 @@
 
     .favorite-icon {
       position: absolute;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      right: 9px;
-      top: -57px;
-      pointer-events: none;
+      right: -25px;
+      top: -30px;
     }
 
     h3 {
@@ -58,4 +56,18 @@
     -webkit-transition: .2s ease-in-out;
     transition: .2s ease-in-out;
   }
+}
+
+.favorite-heart a {
+  color: black; 
+  text-decoration: none;
+}
+
+.favorite-heart:hover a {
+  color: #d34444;
+}
+
+
+.red {
+  color: #ff0000;
 }
