--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -10,19 +10,27 @@
         <% end %>
         <div class="work-of-art-card-infos">
           <h3><%= link_to art.name, work_of_art_path(art) %></h3>
-          <%= link_to toggle_favorite_work_of_art_path(art), remote: true, method: :post do %>
-          <%= render 'work_of_arts/like_button', work_of_art: art %>
+          <% unless current_user == art.user %>
+          <div class="favorite-heart">
+            <%= link_to toggle_favorite_work_of_art_path(art), remote: true, method: :post do %>
+            <%= render 'work_of_arts/like_button', work_of_art: art %>
+            <% end %>
+          </div>
           <% end %>
           <p>by <u> <%= link_to user_path(art.user) do %>
                       <%= art.user.first_name %>
                       <%= art.user.last_name %>
                     <% end %> </u></p>
-          <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
         </div>
         <br>
         <br>
       </div>
     <% end %>
-    <%= current_user.all_favorited %>
+
+    <% @favorite_work_of_arts.each do |art| %>
+      <h3> <%= art.id %> </h3>
+      <p> <%= art.description %> </p>    
+    <% end %>
+
   </div>
 </div>
