--- a/app/views/work_of_arts/toggle_favorite.js.erb
+++ b/app/views/work_of_arts/toggle_favorite.js.erb
@@ -1,9 +1,7 @@
 var work_of_artId = '<%= @work_of_art.id %>'
 
-
-
-function toggleLikeButton(work_of_artId, innerHTML) {
-    let likeButton = document.querySelector(`.like-icon[data-id='${work_of_artId}']`)
+function toggleLikeButton(work_of_artId) {
+    let likeButton = document.querySelector(`.favorite-icon[data-id='${work_of_artId}']`)
     likeButton.classList.toggle('red');
   }
   toggleLikeButton(work_of_artId);
