--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -6,6 +6,7 @@
       <p><%= @exhibition.description %></p>
       <% if @exhibition.collab.users.include?(current_user) %>
         <%= link_to "Edit", edit_exhibition_path(@exhibition), class: 'btn-outline-primary' %>
+        <%= link_to "Delete", @exhibition, data: { confirm: "Are you sure?" }, :method => :delete, class: "btn-outline-primary" %>
       <% end %>
     </div>
     <%= link_to "All collabs", collabs_path, class: 'btn-outline-primary' %>
