--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,30 +1,35 @@
 .navbar-container {
   background-color: #f4f4f4;
   padding: 0 25px;
-}
 
-.navbar-hr {
-  border-color: black;
-}
+  .navbar-hr {
+    border-color: black;
+  }
 
-.navbar-lewagon {
-  padding: 0;
-  justify-content: space-between;
-  box-shadow: none;
+  .navbar-lewagon {
+    padding: 0;
+    justify-content: space-between;
+    box-shadow: none;
+  }
 
-  .nav-link {
+  .navbar-lewagon .navbar-collapse {
+    flex-grow: 0;
+  }
+
+  a {
     margin-right: 50px;
     font-family: "Novar";
     color: black;
     font-weight: bold;
   }
-}
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+  a:hover, a:active, a:visited {
+    text-decoration: underline;
+    text-underline-position: under;
+  }
 
-.nav-link:hover {
-  text-decoration: underline;
-  text-underline-position: under;
+  .active-tab {
+    text-decoration: underline;
+    text-underline-position: under;
+  }
 }
