--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,18 +8,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item active <%= 'active-tab' if current_page?(root_path) %>">
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active <%= 'active-tab' if current_page?(users_path) %>">
           <%= link_to "Artists", users_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active <%= 'active-tab' if current_page?(work_of_arts_path) %>">
           <%= link_to "Artworks", work_of_arts_path, class: "nav-link" %>
-        <li class="nav-item active">
+        </li>
+        <li class="nav-item active <%= 'active-tab' if current_page?(collabs_path) %>">
           <%= link_to "Collabs", collabs_path, class: "nav-link" %>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active <%= 'active-tab' if current_page?(exhibitions_path) %>">
           <%= link_to "Exhibitions", exhibitions_path, class: "nav-link" %>
         </li>
       </ul>
@@ -37,7 +38,7 @@
           <li class="nav-item dropdown">
             <%= image_tag "account-logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "My profile", user_path(current_user), class: "dropdown-item nav-link" %>
+              <%= link_to "My Profile", user_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "Messages", "#", class: "nav-link" %>
               <%= link_to "My Art", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "My Collabs", collabs_path(query: 'my_collabs'), class: "dropdown-item nav-link" %>
