--- a/app/views/users/_infowindow.html.erb
+++ b/app/views/users/_infowindow.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card-body">
-    <h2><%= user.username %></h2>
+    <h2><%= link_to user.username, user_path(user) %></h2>
     <h3><%= user.city %></h3>
   </div>
 </div>
