--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,6 +41,7 @@
               <%= link_to "My Profile", user_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "Messages", "#", class: "nav-link" %>
               <%= link_to "My Art", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
+              <%= link_to "My favorites", myfavorites_path, class: "dropdown-item nav-link" %>
               <%= link_to "My Collabs", collabs_path(query: 'my_collabs'), class: "dropdown-item nav-link" %>
               <%= link_to "My Exhibitions", exhibitions_path(query: 'my_exhibitions'), class: "dropdown-item nav-link" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item nav-link" %>
