design for the collab index page done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -17,4 +17,5 @@
 @import "background";
 @import "forms";
 @import "map";
-@import "exhibition-card"
+@import "exhibition-card";
+@import "collab-table";
