--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -1,16 +1,18 @@
-<div class="container">
-  <h2><%= @collab.name %></h2>
-  <% @collab.users.each do |user| %>
-    <div class="work-of-art-card">
-      <%= user.username %>
-      <% if @collab.users.include?(current_user) %>
-        <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
-      <% end %>
-    </div>
-  <% end %>
-  <% if @collab.users.include?(current_user) %>
-    <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
-    <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition) %>
-  <% end %>
-  <%= link_to "Back", collabs_path %>
+<div class="<%= page_background_class %>">
+  <div class="container">
+    <h2><%= @collab.name %></h2>
+    <% @collab.users.each do |user| %>
+      <div class="work-of-art-card">
+        <%= user.username %>
+        <% if @collab.users.include?(current_user) %>
+          <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
+        <% end %>
+      </div>
+    <% end %>
+    <% if @collab.users.include?(current_user) %>
+      <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
+      <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition) %>
+    <% end %>
+    <%= link_to "Back", collabs_path %>
+  </div>
 </div>
