fix edit art_type user and add set_art_type instance method in application model

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,6 +13,7 @@
                       required: false %>
           <%= f.input :art_type,
                       label: "Category",
+                      collection: @user.set_art_types,
                       autofocus: true,
                       placeholder: "Painter",
                       required: false %>
