--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,7 +39,7 @@
             <%= image_tag "account-logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <%= link_to "My Profile", user_path(current_user), class: "dropdown-item nav-link" %>
-              <%= link_to "Messages", "#", class: "nav-link" %>
+              <%= link_to "Messages", conversations_path, class: "nav-link" %>
               <%= link_to "My Art", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "My Collabs", collabs_path(query: 'my_collabs'), class: "dropdown-item nav-link" %>
               <%= link_to "My Exhibitions", exhibitions_path(query: 'my_exhibitions'), class: "dropdown-item nav-link" %>
