--- a/app/views/work_of_arts/_form-work_of_art.html.erb
+++ b/app/views/work_of_arts/_form-work_of_art.html.erb
@@ -7,6 +7,7 @@
           <div class="form-inputs">
             <%= f.input :name %>
             <%= f.input :description %>
+            <%= f.input :art_type, collection: @work_of_art.set_art_types %>
             <%= f.input :photo, as: :file %>
           </div>
           <div class="form-actions">
