changed the size of the favorite icon, moved the code to the icon component and fixed issues with buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -51,6 +51,7 @@
 }
 
 .btn-outline-primary {
+  font-family: "Novar";
   width: 100%;
   margin-bottom: 20px;
   border-color: #1098ad;
@@ -74,6 +75,7 @@
 }
 
 .btn-outline-warning {
+  font-family: "Novar";
   width: 100%;
   margin-bottom: 20px;
   border-color: #f79533;
