--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -20,7 +20,6 @@
 
     a {
       text-decoration: none;
-      color: black;
     }
 
     .favorite-icon {
@@ -33,8 +32,16 @@
       margin-top: 8px;
     }
 
+    h3 a {
+      color: black;
+    }
+
     p {
       margin-bottom: 8px;
+    }
+
+    p a {
+      color: black;
     }
   }
 
@@ -51,18 +58,4 @@
     -webkit-transition: .2s ease-in-out;
     transition: .2s ease-in-out;
   }
-}
-
-.favorite-heart a {
-  color: black; 
-  text-decoration: none;
-}
-
-.favorite-heart:hover a {
-  color: #d34444;
-}
-
-
-.red {
-  color: #ff0000;
 }
