--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -1,6 +1,8 @@
 <div class="<%= page_background_class %>">
   <div class="container">
     <h2><%= @collab.name %></h2>
+
+    <h5> Members: </h5>
     <% @collab.users.each do |user| %>
       <div class="work-of-art-card">
         <%= user.username %>
@@ -9,10 +11,35 @@
         <% end %>
       </div>
     <% end %>
+
+    <% if @collab.users.include?(current_user) %>
+      <div >
+        <% @collab.to_dos.each do |to_do| %>
+        <div class='card-to-do'>
+          <h4><%= to_do.title %>  <%= link_to "<i class='fas fa-pen'></i>".html_safe, edit_to_do_path(to_do) %></h4>
+        <div>
+          <ul>
+            <% to_do.to_do_items.each do |item| %>
+            <li> <%= item.content %> <%= link_to "<i class='far fa-times-circle'></i>".html_safe,
+                                                to_do_item_path(item),
+                                                method: :delete,
+                                                data: { confirm: "Remove this Idea?" }  %></li>
+            <% end %>
+            <li> <%= link_to "Add a new item", new_to_do_to_do_item_path(to_do) %></li>
+          </ul>
+        </div>
+      </div>
+        <% end %>
+      </div>
+    <% end %>
+
+
+
     <% if @collab.users.include?(current_user) %>
       <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
       <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition) %>
+      <%= link_to "Add a Brainstorm table", new_collab_to_do_path(@collab) %>
     <% end %>
-    <%= link_to "Back", collabs_path %>
+    <%= link_to "Back to Collabs", collabs_path %>
   </div>
 </div>
