--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -25,7 +25,7 @@
                                                 method: :delete,
                                                 data: { confirm: "Remove this Idea?" }  %></li>
             <% end %>
-            <li> <%= link_to "Add a new item", new_to_do_to_do_item_path(to_do) %></li>
+            <li> <%= link_to "<i class='fas fa-plus-circle'></i>".html_safe, new_to_do_to_do_item_path(to_do) %></li>
           </ul>
         </div>
       </div>
