added city and country column to exhibition table

--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -21,7 +21,7 @@
           <hr>
           <h4><%= @exhibition.start_date %> - <%= @exhibition.end_date %></h4>
           <hr>
-          <h4><%= @exhibition.address %></h4>
+          <h4><%= @exhibition.address %> - <%= @exhibition.city  %>, <%= @exhibition.country  %></h4>
           <hr>
           <p><%= @exhibition.category %></p>
           <hr>
