--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -15,7 +15,7 @@
     <div class="exhibition-list-infos">
       <h3><%= link_to exhibition.name, exhibition_path(exhibition) %></h3>
       <h4><%= exhibition.start_date %><%= exhibition.end_date %></h4>
-      <h4><%= exhibition.address %></h4>
+      <h4><%= exhibition.address %> - <%= exhibition.city  %>, <%= exhibition.country  %></h4>
       <%= link_to "Get info", exhibition_path(exhibition), class: "btn btn-outline-primary" %>
     </div>
     <hr class="divider">
