--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -10,6 +10,7 @@
         <% end %>
         <div class="work-of-art-card-infos">
           <h3><%= link_to art.name, work_of_art_path(art) %></h3>
+          <p><%= art.creation_date.strftime('%Y') unless art.creation_date.nil?%></p>
           <% unless current_user == art.user %>
           <div class="favorite-heart">
             <%= link_to toggle_favorite_work_of_art_path(art), remote: true, method: :post do %>
