--- a/app/views/work_of_arts/show.html.erb
+++ b/app/views/work_of_arts/show.html.erb
@@ -14,7 +14,7 @@
         <%= image_tag('dodoma.png') %>
       <% end %>
       <div class="work-of-art-card-infos">
-        <h3><%= @work_of_art.user.first_name %> - <%= @work_of_art.user.last_name %></h3>
+        <h3> <%= @work_of_art.user.username %></h3>
         <h4><%= @work_of_art.name %></h4>
         <p><%= @work_of_art.description %></p>
         <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
