--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,10 @@
         <div class="profile-card-infos">
           <h3><%= @user.username  %></h3>
           <hr>
+          <% if @user.first_name.present? %>
+            <h4><%= @user.first_name %> <%= @user.last_name %></h4>
+            <hr>
+          <% end %>
           <h4><%= @user.art_type  %></h4>
           <hr>
           <p><%= @user.city  %>, <%= @user.country  %></p>
