--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,9 +8,9 @@
     <% @users.each do |user| %>
       <div class="artist-card">
         <% if user.photo.attached? %>
-          <%= image_tag user.photo, crop: :fill %>
+          <%= link_to image_tag user.photo, user_path(user), crop: :fill %>
         <% else %>
-          <%= link_to image_tag("artist.png"), user_path(user)%>
+          <%= link_to image_tag("artist.png"), user_path(user) %>
         <% end %>
         <div class="artist-card-infos">
           <h3> <%= link_to user_path(user) do %>
