--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -4,9 +4,9 @@
     <% @work_of_arts.each do |art| %>
       <div class="work-of-art-card">
         <% if art.photo.attached? %>
-          <%= cl_image_tag art.photo.key, crop: :fill %>
+          <%= link_to image_tag(art.photo), work_of_art_path(art), crop: :fill %>
         <% else %>
-          <%= image_tag('dodoma.png') %>
+          <%= link_to image_tag('dodoma.png'), work_of_art_path(art) %>
         <% end %>
         <div class="work-of-art-card-infos">
           <h3><%= link_to art.name, work_of_art_path(art) %></h3>
