--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -18,6 +18,5 @@
 @import "forms";
 @import "map";
 @import "exhibition-card";
-@import "to_do_card"
+@import "to_do_card";
 @import "collab-card";
-
