--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,14 @@
 // Specific CSS for your home-page
-h1 {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Novar";
+}
+
+.banner {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://source.unsplash.com/collection/art);
+  background-position: center;
+  background-size: cover;
 }
