--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <% @users.each do |user| %>
       <div class="artist-card">
         <% if user.photo.attached? %>
-          <%= link_to image_tag user.photo, user_path(user), crop: :fill %>
+          <%= link_to image_tag(user.photo), user_path(user), crop: :fill %>
         <% else %>
           <%= link_to image_tag("artist.png"), user_path(user) %>
         <% end %>
