--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -4,9 +4,9 @@
   <br>
     <div class="exhibition-headers">
       <h2><%= link_to "Past", "#" %></h2>
-      <div style="border-left:1px solid black;height:40px"></div>
+      <div class="vertical-lign" style="border-left:1px solid black;height:40px"></div>
       <h2><%= link_to "Current", "#" %></h2>
-      <div style="border-left:1px solid black;height:40px"></div>
+      <div class="vertical-lign" style="border-left:1px solid black;height:40px"></div>
       <h2><%= link_to "Future", "#" %></h2>
     </div>
     <br>
@@ -14,9 +14,15 @@
     <% @exhibitions.each do |exhibition| %>
     <div class="exhibition-list-infos">
       <h3><%= link_to exhibition.name, exhibition_path(exhibition) %></h3>
-      <h4>From <%= exhibition.start_date.strftime('%A %d %B %Y') %> to <%= exhibition.end_date.strftime('%A %d %B %Y') %></h4>
-      <h4><%= exhibition.address %> - <%= exhibition.city  %>, <%= exhibition.country  %></h4>
-      <%= link_to "Get info", exhibition_path(exhibition), class: "btn btn-outline-primary" %>
+      <h4>From <%= exhibition.start_date.strftime('%d %B %Y') %>
+        <br>
+        to <%= exhibition.end_date.strftime('%d %B %Y') %></h4>
+      <h4><%= exhibition.address %> -
+        <br>
+        <%= exhibition.city  %>, <%= exhibition.country  %></h4>
+      <div class="btn-exhibition-info">
+        <%= link_to "Get info", exhibition_path(exhibition), class: "btn btn-outline-primary" %>
+      </div>
     </div>
     <hr class="divider">
     <% end %>
