--- a/app/assets/stylesheets/components/_exhibition-card.scss
+++ b/app/assets/stylesheets/components/_exhibition-card.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   margin-bottom: 50px;
+  align-items: center;
 
   a {
     color: inherit;
@@ -12,6 +13,7 @@
   }
 
   h2 {
+    margin-bottom: 0;
     width: 150px;
     text-align: center;
   }
@@ -22,9 +24,10 @@
   justify-content: space-evenly;
   align-items: center;
 
-  h3, h4 {
+  h3 {
     margin-bottom: 0;
-    width: 250px;
+    width: 200px;
+    text-justify: center;
 
     a {
       color: inherit;
@@ -32,9 +35,23 @@
     }
   }
 
-  .btn-outline-primary {
-    width: 10%;
+  h4 {
     margin-bottom: 0;
+    width: 250px;
+    text-justify: center;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+
+  .btn-exhibition-info {
+    width: 10%;
+
+    .btn-outline-primary {
+      margin-bottom: 0;
+    }
   }
 }
 
