--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -30,6 +30,7 @@
 
     h3 {
       margin-top: 8px;
+      margin-bottom: 0;
     }
 
     h3 a {
@@ -37,7 +38,7 @@
     }
 
     p {
-      margin-bottom: 8px;
+      margin-bottom: 0;
     }
 
     p a {
