--- a/app/views/collabs/index.html.erb
+++ b/app/views/collabs/index.html.erb
@@ -3,10 +3,10 @@
     <br>
     <% @collabs.each do |collab| %>
       <div class="collab-list-infos">
-        <h3><%= link_to collab.name, collab_path(collab) %></h3>
-        <h4>Some description</h4>
+        <h3><%= collab.name %></h3>
+        <h4><%= collab.description %></h4>
         <h4>And maybe something else?</h4>
-        <%= link_to "Join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: collab.id, user_id: current_user.id, status: "accepted" }), method: :post , class: 'btn btn-outline-primary' %>
+        <%= link_to "Join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
       </div>
       <hr class="divider">
     <% end %>
