design of the homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,13 @@
-
-
- <div class="banner">
- </div>
- <div class="row">
-  <div class="col">
+<div class="banner">
+  <div class="row">
+    <div class="col">
+      <h1>Creativity takes courage.</h1>
+      <h3>Join us now, display your art and find other artists like you</h3>
+        <div class="btn-apply">
+          <%= link_to new_user_registration_path do %> 
+            <h6 class="btn-join-now">Join us</h6>
+          <% end %>
+        </div>
+    </div>
   </div>
- </div>
+</div>
