--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,14 +1,57 @@
-// Specific CSS for your home-page
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Novar";
-}
-
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://source.unsplash.com/collection/art);
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(background.jpg);
   background-position: center;
   background-size: cover;
+}
+
+.row {
+  display: flex;
+  height: 88%;
+  align-items: center;
+  .col {
+    margin: 0 auto;
+    max-width: 640px;
+    h1 {
+      color: #fff;
+      font-size: 53px;
+      line-height: 56px;
+      font-weight: 500;
+    }
+    h3 {
+      color: #fff;
+      margin-bottom: 50px;
+      font-size: 26px;
+      line-height: 32px;
+      font-weight: 600;
+    }
+  }
+}
+
+.btn-apply{
+  width: 170px;
+  padding: 12px 0;
+  background: #fff;
+  border-radius: 20px;
+  outline: none;
+  margin-top: 30px;
+  height: 60px;
+  a {
+    text-decoration: none;
+  }
+  .btn-join-now {
+    font-size: 28px;
+    font-weight: 800;
+    text-decoration: none;
+    text-align: center;
+    color: #000;
+  }
+  .btn-join-now:hover {
+    color: rgb(97, 97, 97);
+  }
+}
+
+.background {
+  background-color: #f4f4f4;
 }
