--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -3,27 +3,12 @@
   <% if @accepted_users %>
     <h2><%= @collab.name %></h2>
 
-    <% @accepted_collab.each do |collab| %>
-        <div class="work-of-art-card">
-          <%= collab.user.username %>
-          <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == collab.user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
-          <%  %>
-        </div>
-      <% end %>
-      <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
-      <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition) %>
-    <%= link_to "Back", collabs_path %>
-  <% else %>
-  <h2>Your request is pending !</h2>
-  <% end %>
-
-<!--
     <h5> Members: </h5>
-    <% @collab.users.each do |user| %>
+    <% @accepted_collab.each do |collab| %>
       <div class="work-of-art-card">
-        <%= user.username %>
+        <%= collab.user.username %>
         <% if @collab.users.include?(current_user) %>
-          <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
+          <%= link_to "Remove this artist", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == collab.user }), method: :delete, data: {confirm: "Remove artist from the collab?"} %>
         <% end %>
       </div>
     <% end %>
@@ -49,14 +34,13 @@
       </div>
     <% end %>
 
-
-
-    <% if @collab.users.include?(current_user) %>
       <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab) %>
       <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition) %>
       <%= link_to "Add a Brainstorm table", new_collab_to_do_path(@collab) %>
-    <% end %>
-    <%= link_to "Back to Collabs", collabs_path %> -->
 
+    <%= link_to "Back to Collabs", collabs_path %>
+    <% else %>
+    <h2>Your request is pending !</h2>
+    <% end %>
   </div>
 </div>
