--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -3,14 +3,7 @@
     <br>
     <% @user_collab_relationships.each do |user_collab_relationship| %>
     <div>
-      <% unless user_collab_relationship.collab.users.include? current_user %>
-        <% if user_collab_relationship.pending? %>
-            <%= user_collab_relationship.collab.name %>
-            <%= link_to user_collab_relationship.user.username, user_path(user_collab_relationship.user) %>
-            <%= link_to "Accept this collab", user_collab_relationship_path(user_collab_relationship), user_collab_relationship: {collab_id: user_collab_relationship.collab.id , user_id: user_collab_relationship.user.id, status: "accepted"}, method: :patch, class: 'btn btn-outline-primary' %>
-            <%= link_to "Reject this collab", user_collab_relationship_path(user_collab_relationship), user_collab_relationship: {collab_id: user_collab_relationship.collab.id , user_id: user_collab_relationship.user.id, status: "rejected"},method: :patch, class: 'btn btn-outline-primary' %>
-        <% end %>
-      <% end %>
+      user_collab_relationship.collab.users.select{|user| user.}
     </div>
       <div class="collab-list-infos">
         <% if user_collab_relationship.accepted? %>
@@ -33,5 +26,9 @@
   <br>
   <br>
 </div>
+<!-- @user_collab_relationships = UserCollabRelationship.includes(:collab).where(user: current_user)
 
-
+    <%# = user_collab_relationship.collab.name %>
+            <%#= link_to user_collab_relationship.user.username, user_path(user_collab_relationship.user) %>
+            <%#= link_to "Accept this collab", user_collab_relationship_path(user_collab_relationship), user_collab_relationship: {collab_id: user_collab_relationship.collab.id , user_id: user_collab_relationship.user.id, status: "accepted"}, method: :patch, class: 'btn btn-outline-primary' %>
+            <%#= link_to "Reject this collab", user_collab_relationship_path(user_collab_relationship), user_collab_relationship: {collab_id: user_collab_relationship.collab.id , user_id: user_collab_relationship.user.id, status: "rejected"},method: :patch, class: 'btn btn-outline-primary' %> -->
